SERVER-57014 Include all index keys in relevant slots for index filter